packages/components/bolt-text/src/text.scss
@import '@bolt/core-v3.x';

/* ------------------------------------ *\
   Text
\* ------------------------------------ */

// Attribute selectors for parent bolt-text
@include bolt-repeat-rule(('bolt-text', ':host')) {
  display: block;
  margin-bottom: var(--c-bolt-text-margin-bottom, var(--bolt-spacing-y-medium));

  &[display='inline'] {
    display: inline;
  }
  &[display='block'] {
    display: block;
  }

  // Adding vspacing here so that we can remove vspacing on last-child
  &[headline],
  &[eyebrow] {
    --c-bolt-text-margin-bottom: var(--bolt-spacing-y-xxsmall);
  }
  &[subheadline] {
    --c-bolt-text-margin-bottom: var(--bolt-spacing-y-xsmall);
  }

  &:last-child {
    --c-bolt-text-margin-bottom: 0;
  }
}

.c-bolt-text-v2 {
  margin: 0;
  padding: 0;
  line-height: var(--c-bolt-text-line-height, unset);
  letter-spacing: var(--c-bolt-text-letter-spacing, unset);
  font-family: var(--c-bolt-text-font-family, unset);
  font-size: var(--c-bolt-text-font-size, unset);
  font-weight: var(--c-bolt-text-font-weight, unset);
  font-display: swap;

  // Font family
  @each $family in $bolt-type-font-family-system {
    $family-name: nth($family, 1);

    &--#{$family-name} {
      --c-bolt-text-font-family: var(--bolt-type-font-family-#{$family-name});
    }
  }

  // Font Weight Options
  @each $weight in $bolt-type-font-weight-system {
    $weight-name: nth($weight, 1);

    &--font-weight-#{$weight-name} {
      --c-bolt-text-font-weight: var(--bolt-type-font-weight-#{$weight-name});
    }
  }

  // Font size
  @each $size in $bolt-type-font-size-system {
    $size-name: nth($size, 1);

    &--font-size-#{$size-name} {
      --c-bolt-text-font-size: var(--bolt-type-font-size-#{$size-name});
    }
  }

  // Letter spacing
  @each $spacing in $bolt-type-letter-spacing-system {
    $spacing-name: nth($spacing, 1);

    &--letter-spacing-#{$spacing-name} {
      --c-bolt-text-letter-spacing: var(
        --bolt-type-letter-spacing-#{$spacing-name}
      );
    }
  }

  // Line height
  @each $size in $bolt-type-font-size-system {
    $size-name: nth($size, 1);

    &--font-size-#{$size-name} {
      --c-bolt-text-line-height: var(--bolt-type-line-height-#{$size-name});

      @each $height in $bolt-type-line-height-multiplier-system {
        $height-name: nth($height, 1);

        &.c-bolt-text-v2--line-height-#{$height-name} {
          --c-bolt-text-line-height: calc(
            var(--bolt-type-line-height-#{$size-name}) *
              var(--bolt-type-line-height-multiplier-#{$height-name})
          );
        }
      }
    }
  }

  // Display type
  &--inline {
    display: inline;
  }

  &--block {
    display: block;
  }

  // Color
  &--color-theme-headline {
    color: bolt-theme(headline);
  }

  &--color-theme-body {
    color: bolt-theme(text);
  }

  // Font style
  &--font-style-regular {
    font-style: normal;
  }

  &--font-style-italic {
    font-style: italic;
  }

  // Text align
  &--align-inherit {
    text-align: inherit;
  }

  &--align-start {
    text-align: start;
  }

  &--align-center {
    text-align: center;
  }

  &--align-end {
    text-align: end;
  }

  // Text transform
  &--text-transform-regular {
    text-transform: none;
  }

  &--text-transform-uppercase {
    text-transform: uppercase;
  }

  &--text-transform-lowercase {
    text-transform: lowercase;
  }

  &--text-transform-capitalize {
    text-transform: capitalize;
  }

  // Quoted style
  &--quoted {
    &:before,
    &:after {
      font-family: 'Georgia', serif;
    }

    &:before {
      content: '\201C';
      position: absolute;
      transform: translate3d(-110%, 0, 0);
    }

    &:after {
      content: '\201D';
    }
  }

  // Opacity
  @each $key, $value in $bolt-opacities {
    &--opacity-#{$key} {
      opacity: bolt-opacity($key);
    }
  }

  a {
    opacity: bolt-opacity(100);
    transition: all $bolt-transition;

    &:link,
    &:visited {
      color: bolt-theme(link);
      text-decoration: underline;
    }

    &:hover {
      opacity: $bolt-global-link-hover-opacity;
    }

    &:active,
    &:focus:active {
      opacity: $bolt-global-link-active-opacity;
    }
  }

  &.c-bolt-text-v2--headline {
    a:link,
    a:visited {
      text-decoration: none;
    }

    a:hover {
      text-decoration: underline;
    }
  }
}

